# structly-whois-parser

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: Dockerfile.consumer  README.md  benchmark_whois.py  console-config.yml  docker-compose.yml  results.md  run_benchmarks.py
benchmarks/scripts/: consume_and_parse.py  create_topics.py  seed_whois_data.py
docs/: benchmarks.md  index.md
src/structly_whois/: __about__.py  config.py  domain_inference.py  parser.py
src/structly_whois_parser/: __init__.py  config.py  normalization.py  parser.py  records.py
tests/: __init__.py  conftest.py  domain_targets.txt  generate_expected.py  report_coverage.py  sample_utils.py  test_cli.py  test_config.py  test_extensibility.py  test_normalization.py  test_parser.py  test_records.py  test_structly_whois_parser.py
tests/common/: helpers.py  sample_utils.py
tests/integration/: test_parser.py  test_structly_whois_parser.py
tests/samples/expected/: aadhaar.gov.in.txt  abc.net.au.txt  abc.xyz.txt  about.us.txt  abv.bg.txt  afip.gob.ar.txt  ah.nl.txt  airfrance.fr.txt  allegro.pl.txt  anz.com.au.txt  archive.org.txt  ato.gov.au.txt  baidu.cn.txt  banamex.com.mx.txt  bbc.co.uk.txt  bbva.es.txt  belgium.be.txt  bpost.be.txt  cisco.info.txt  cloudflare.net.txt  coca-cola.co.txt  cyberciti.biz.txt  davidwalsh.name.txt  drupalcamp.by.txt  enel.it.txt  eurid.eu.txt  gob.mx.txt  (+75 more)
tests/scripts/: generate_expected.py  report_coverage.py
tests/unit/: test_cli.py  test_domain_inference.py  test_normalization.py  test_records.py
(+110 files in other folders)
